examples/invalid/duplicate_conclusion.jd
justification j {
    conclusion c1 is "First conclusion"
    conclusion c2 is "Second conclusion"
}
